css/style.css
@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Staatliches&display=swap");
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}
body {
  font-family: "Poppins", sans-serif;
  background-color: #0b0d2b;
}
.container {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 30px;
  overflow: hidden;
}
/* Utility */
.primary-color {
  color: #ff960b;
}
.main-header {
  background: url("../images/hero_background.jpg");
  width: 100%;
  height: 100vh;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  color: #fff;
}
.logo img {
  max-width: 240px;
  cursor: pointer;
  /* -webkit-filter: invert(100%); 
  filter: invert(100%); */
}
.navbar {
  padding: 40px 0;
}
.main-header .content {
  margin-top: 6%;
  padding-bottom: 15px;
}
.main-header .content h1 {
  font-size: 70px;
  margin-bottom: 15px;
  font-family: "Staatliches", sans-serif;
}
.btn-primary {
  display: inline-block;
  margin-top: 30px;
  /* background: #ff960b; */
  background: #8d6aea;
  /* color: #000; */
  color: #fff;
  font-size: 20px;
  font-weight: 600;
  text-transform: uppercase;
  text-decoration: none;
  padding: 15px 30px;
  border-radius: 30px;
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  -webkit-transition-property: box-shadow, transform;
  transition-property: box-shadow, transform;
  cursor: pointer;
}
/* section-a */
.section-a,
.section-b {
  color: #fff;
  background-color: #0b0d2b;
}
.section-a .row {
  display: flex;
  justify-content: space-between;
  padding: 20px;
  gap: 30px;
}
.section-a .video-container {
  margin-top: 40px;
  margin-bottom: 60px;
  display: flex;
  justify-content: center;
}
.video-container video {
  box-shadow: rgba(255, 255, 255, 0.35) 0px 1px 5px 0px;
}
.section-a .row img {
  max-width: 406px;
}
.section-b .row img,
.section-c .row img {
  /* max-width: 100%; */
  max-width: 500px;
}

.section-a .offer {
  padding: 40px;
  box-shadow: rgba(255, 255, 255, 0.35) 0px 5px 15px;
}
.section-a h2 {
  font-size: 2.5rem;
  text-transform: uppercase;
}
.section-a h2 span {
  background: linear-gradient(90deg, #00dbde, #fc00ff);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}
.section-a p {
  color: #f4f4f4;
  font-size: 1.4rem;
  line-height: 1.6;
  margin: 20px 0;
}
.section-a p span {
  color: #ff960b;
  font-size: 2rem;
  font-family: "Staatliches", sans-serif;
}
/* Section-b */
.section-b,
.section-c,
.section-d {
  margin: 48px 0;
}
.section-b .row {
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 30px;
  margin: 50px 0;
  gap: 50px;
}
.section-b h2 {
  text-align: center;
  font-size: 2.3rem;
  text-decoration: underline;
  text-underline-offset: 4px;
  text-transform: capitalize;
}
.section-b h3 {
  font-size: 1.6rem;
  text-transform: capitalize;
}
.section-b .rating {
  display: flex;
  /* justify-content: center; */
  align-items: center;
  gap: 20px;
  font-size: 1.3rem;
  margin: 30px 0;
  /* background-color: #f4f4f4; */
}
.section-b .rating .checked {
  color: orange;
}
/* section-c */
.section-c .row {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 40px;
  color: #fff;
}
.section-c h2 {
  font-size: 1.9rem;
  text-transform: capitalize;
}
.section-c .secondary-heading {
  font-size: 1.5rem;
  text-align: center;
  font-weight: 400;
  text-transform: capitalize;
}
.section-c .trade-report {
  display: flex;
  justify-content: center;
  /* justify-content: space-between; */
  gap: 40px;
  padding: 40px 0;
  /* border: 1px solid red; */
}
.section-c .trade-report div {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 20px;
  padding: 40px;
  box-shadow: rgba(181, 181, 184, 0.27) 0px 0px 0.25em,
    rgba(200, 201, 203, 0.05) 0px 0.25em 1em;
}
.section-c .trade-report span {
  color: rgb(61, 232, 61);
  font-size: 3.2rem;
  font-weight: 700;
}
/* Section-d */
.section-d h2 {
  color: #fff;
  font-size: 2rem;
  padding: 20px 0;
  font-weight: 600;
  text-align: center;
}
.section-d .row {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 30px;
  margin: 40px 0;
  flex-wrap: wrap;
}
.section-d .row .card {
  color: #fff;
  text-align: center;
  padding: 30px;
  max-width: 300px;
  height: 280px;
  max-height: 100%;
  cursor: pointer;
  /* border: 1px solid red; */
  box-shadow: rgba(181, 181, 184, 0.27) 0px 0px 0.25em,
    rgba(200, 201, 203, 0.05) 0px 0.25em 1em;
}
.section-d .card-text {
  padding: 20px 0;
  font-size: 1.1rem;
}
.section-d .card-text h3 {
  font-weight: 400;
}
.section-d .card img {
  max-width: 100px;
  width: 100%;
}

/* Unlock offer styling start */
.section-d .unlock-offer {
  position: relative;
  padding-bottom: 90px;
  display: none;
}
.section-d .unlock-offer .trial-offer {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 10px;
  background-color: #fff;
  max-width: 300px;
  margin: 0 auto;
  border-radius: 30px;
  padding: 20px 0 40px 0;
  z-index: -1;
  width: 100%;
  height: 100%;
}
.trial-offer img {
  width: 25px;
  height: auto;
}
.unlock-offer .trial-offer p {
  font-size: 1.5rem;
  font-weight: 600;
  color: #111;
}
.unlock-offer .btn-secondary {
  position: absolute;
  background-color: #ff960b;
  color: #111;
  top: 60px;
  right: 417px;
  z-index: 1;
  font-size: 1.5rem;
  text-decoration: none;
  display: inline-block;
  border-radius: 30px;
  padding-top: 20px;
  padding-bottom: 20px;
  padding-left: 60px;
  padding-right: 60px;
  text-align: center;
}
/* Unlock offer styling end */

.section-d .button-box {
  width: 497px;
  margin: 35px auto;
  position: relative;
  border-radius: 30px;
  background: #fff;
  /* display: none; */
}

.section-d .toggle-btn {
  padding: 20px 15px;
  cursor: pointer;
  background: transparent;
  border: 0;
  outline: none;
  position: relative;
  text-align: center;
  font-size: 1.5rem;
  font-weight: 600;
}
.section-d #btn {
  left: 0;
  top: 0;
  position: absolute;
  width: 277px;
  height: 100%;
  background: #ff960b;
  border-radius: 30px;
  transition: 0.5s;
}
.btn-secondary:hover,
.btn-primary:hover {
  opacity: 0.9;
  transition: 0.2s;
  box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
  -webkit-transform: scale(1.1);
  transform: scale(1.1);
}
/* footer */
.main-footer {
  margin-top: 40px;
  color: #f4f4f4;
  text-align: center;
  padding: 10px 0;
  border-top: 1px solid #4f4e4e;
  font-size: 0.9rem;
}
/* Custom Scrollbar */
/* width */
::-webkit-scrollbar {
  width: 10px;
}

/* Track */
::-webkit-scrollbar-track {
  box-shadow: inset 0 0 5px grey;
  border-radius: 10px;
}

/* Handle */
::-webkit-scrollbar-thumb {
  background: #ff960b;
  border-radius: 10px;
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
  background: rgb(61, 232, 61);
}
/* Media Query */
@media (max-width: 768px) {
  .logo img {
    max-width: 150px;
  }
  .main-header {
    height: 90vh;
  }
  .main-header .content h1 {
    font-size: 50px;
  }
  .section-a .row {
    flex-direction: column;
  }
  .section-a .row img,
  .section-c .row img {
    display: none;
  }
  .section-a video {
    width: 100%;
  }
  .section-a h2,
  .section-b h2,
  .section-d h2 {
    font-size: 2rem;
    font-weight: 600;
  }
  .section-a p {
    font-size: 1.2rem;
  }
  .section-a p span {
    font-size: 1.8rem;
  }
  .section-a .offer {
    padding: 20px;
  }
  .section-b,
  .section-c {
    margin: 30px 0;
    border-bottom: 1px dotted #555555;
  }
  .section-b .row {
    flex-direction: column-reverse;
    margin-bottom: 20px;
  }
  .section-b .row img {
    max-width: 400px;
  }
  .section-b .row .col-1 {
    order: 2;
  }
  .section-b .row .col-2 {
    order: 1;
  }
  .section-b h3 {
    font-size: 1.3rem;
    font-weight: 400;
  }
  .section-c .row {
    flex-direction: column;
  }
  .section-c h2 {
    text-align: center;
    font-weight: 600;
  }

  .section-c .trade-report span {
    font-size: 2.8rem;
    font-weight: 600;
  }

  .section-d .card-text {
    font-size: 0.9rem;
  }
}

/* mobile */
@media (max-width: 600px) {
  .main-header .content {
    margin-top: 1%;
  }
  .main-header .content h1 {
    font-size: 47px;
    text-align: center;
  }
  .btn-primary {
    display: flex;
    justify-content: center;
    align-items: center;
  }
  .section-c .trade-report {
    flex-direction: column;
  }
  .section-b .rating {
    font-size: 1rem;
    flex-direction: column-reverse;
    gap: 12px;
    margin: 15px 0;
  }
  .section-b p,
  .section-b h3 {
    text-align: center;
  }
  .section-b .seprater {
    display: none;
  }
  .section-b .row img {
    max-width: 320px;
  }
  /* Section d button */
  .section-d .button-box {
    display: none;
  }
  .section-d .unlock-offer {
    display: block;
  }
  .section-d .unlock-offer .trial-offer {
    padding: 15px 0 20px 0;
    max-width: 280px;
  }
  .unlock-offer .trial-offer p {
    font-size: 1.2rem;
  }
  .unlock-offer .btn-secondary {
    position: absolute;
    background-color: #ff960b;
    color: #111;
    top: 50px;
    right: 60px;
    z-index: 1;
    font-size: 1.2rem;
    text-decoration: none;
    display: inline-block;
    border-radius: 30px;
    padding-top: 15px;
    padding-bottom: 15px;
    padding-left: 50px;
    padding-right: 50px;
    text-align: center;
  }
}
/* Small Screen */
@media (max-width: 500px) {
  .unlock-offer .btn-secondary {
    right: 36px;
  }
  .section-d .unlock-offer .trial-offer {
    max-width: 265px;
  }
}

